--- a/src/style-router/index.less
+++ b/src/style-router/index.less
@@ -13,3 +13,32 @@
 .indexbox{
     padding-top: 30px;
 }
+
+.brandlist{
+  width: 100%;
+  overflow: hidden;
+  dl{
+      .fix;
+      border-bottom: 1px solid #ddd;
+  }
+  dt{
+      .tc;
+      .font(1.3rem);
+      padding: 1rem 0;
+  }
+  dd{
+      .fl;
+      .tc;
+      width: 20%;
+      border-left: 1px solid #ddd;
+      border-top: 1px solid #ddd;
+      box-sizing: border-box;
+      padding:1rem 0;
+      img{
+          max-width: 100%;
+      }
+      h4{
+          font-size: 1.1rem;
+      }
+  }
+}
