--- a/src/style-router/public.less
+++ b/src/style-router/public.less
@@ -5,3 +5,32 @@
 @import "../style/common/layout"; //布局
 @import "../style/common/plugins/button";//按钮
 @import "../style/common/plugins/icon"; //icon
+.list-wrapper-index {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 80px;
+  z-index: 1;
+  width: 100%;
+  background: #fff;
+  overflow: hidden;
+}
+
+.list-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  width: 100%;
+  background: #fff;
+  overflow: hidden;
+}
+
+.bottom-tip {
+  width: 100%;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  color: #777;
+}
