--- a/src/style/common/menu.less
+++ b/src/style/common/menu.less
@@ -2,7 +2,7 @@
 @import './mixins';//mixins
 .menu{
     .bg-color(#fff);
-    .elesize(750px;98px);
+    .elesize(100%;98px);
     border-top: 1px solid #ededed;
     position: fixed;
     left: 0;
