--- a/src/style/common/plugins/icon.less
+++ b/src/style/common/plugins/icon.less
@@ -3,56 +3,76 @@
 
 // login
 .ico-regisuc{
-    .icon("../images/loginright.png"; center; center; 120px; 120px);
+    .icon("../../../images/loginright.png"; center; center; 120px; 120px);
 }
 // home
 .ico-home{
-    .icon("../images/icon/ico-m-home.png"; center; center; 51px; 44px);
+    .icon("../../../images/icon/ico-m-home.png"; center; center; 51px; 44px);
 }
 // my
 .ico-my{
-    .icon("../images/icon/ico-m-my.png"; center; center; 51px; 44px);
+    .icon("../../../images/icon/ico-m-my.png"; center; center; 51px; 44px);
 }
 // unlogin
 .ico-unlogin{
-    .icon("../images/icon/ico-user.png"; center; center; 180px; 180px);
+    .icon("../../../images/icon/ico-user.png"; center; center; 180px; 180px);
     background-color: #f8f8f8;
     background-size: 75px;
     border-radius: 50%;
 }
 // my ico sharecar
 .ico-u-car{
-    .icon("../images/icon/ico-u-car.png"; center; center; 48px; 42px);
+    .icon("../../../images/icon/ico-u-car.png"; center; center; 48px; 42px);
 }
 // my ico guest
 .ico-u-guest{
-    .icon("../images/icon/ico-u-guest.png"; center; center; 48px; 42px);
+    .icon("../../../images/icon/ico-u-guest.png"; center; center; 48px; 42px);
 }
 // my ico vip
 .ico-u-vip{
-    .icon("../images/icon/ico-u-vip.png"; center; center; 48px; 42px);
+    .icon("../../../images/icon/ico-u-vip.png"; center; center; 48px; 42px);
 }
 // gold
 .ico-gold{
-    .icon("../images/icon/ico-gold.png"; center; center; 32px; 32px);
+    .icon("../../../images/icon/ico-gold.png"; center; center; 32px; 32px);
 }
 // silver
 .ico-silver{
-    .icon("../images/icon/ico-silver.png"; center; center; 32px; 32px);
+    .icon("../../../images/icon/ico-silver.png"; center; center; 32px; 32px);
 }
 // guest null
 .ico-guestnull{
-    .icon("../images/icon/ico-guestnull.png"; center; center; 207px; 156px);
+    .icon("../../../images/icon/ico-guestnull.png"; center; center; 207px; 156px);
 }
 // zoom
 .ico-zoom{
-    .icon("../images/icon/ico-search.png"; center; center; 31px; 32px);
+    .icon("../../../images/icon/ico-search.png"; center; center; 31px; 32px);
 }
-
 // modify
 .ico-modify{
-    .icon("../images/icon/ico-modify.png"; center; center; 32px; 32px);
+    .icon("../../../images/icon/ico-modify.png"; center; center; 32px; 32px);
     background-size: 24px 27px;
     margin-left: 15px;
     top: -1px;
+}
+// add
+.ico-add{
+    .icon("../../../images/icon/ico-add.png"; center; center; 32px; 32px);
+    background-size: contain;
+    margin-right: 6px;
+}
+
+// return
+.ico-return{
+  .icon("../../../images/icon/ico-change.png"; center; center; 78px; 78px);
+}
+
+.ico-vip{
+  .icon("../../../images/icon/ico-vip.png"; center; center; 22px; 20px);
+}
+.ico-crown{
+  .icon("../../../images/icon/ico-crown.png"; center; center; 28px; 27px);
+}
+.ico-tel{
+  .icon("../../../images/icon/ico-tel.png"; center; center; 60px; 60px);
 }
