--- a/src/style/common/plugins/sharelist.less
+++ b/src/style/common/plugins/sharelist.less
@@ -1,7 +1,8 @@
 @import '../mixins'; //icon
 // 发布的车源列表
 .sharelist{
-    .padding(30px);
+    .padding(30px 30px 0 30px);
+    // .pb(100px);
     dl{
         .pb(25px);
         .p_r;
@@ -9,12 +10,12 @@
             content: "";
             .pos-alt;
             .elesize(100%;100%);
-            background: url("../images/icon/ico-sel.png") no-repeat 95% 25px;
+            background: url("../../../images/icon/ico-sel.png") no-repeat 95% 25px;
             z-index: 2;
             .none;
         }
         &.on:after{
-            background-image: url("../images/icon/ico-selon.png");
+            background-image: url("../../../images/icon/ico-selon.png");
         }
     }
     dd{
