--- a/src/style-router/guest.less
+++ b/src/style-router/guest.less
@@ -2,7 +2,6 @@
 
 .guestbox{
     border-top: 10px solid #f8f8f8;
-
 }
 // 底部工具条
 .toolbar{
@@ -54,13 +53,26 @@
     }
     dd{
         width: 25%;
+        height: 190px;
         box-sizing: border-box;
         .fl;
-        .padding(0 2px 2px 0);
+        .padding(0 5px 5px 0);
         .p_r;
+        .tc;
         overflow: hidden;
+        line-height: 190px;
         img{
             max-width: 100%;
+            max-height: 100%;
+            vertical-align: middle;
+        }
+        &:after{
+            content: "";
+            .pos-alt;
+            .elesize(100%;100%);
+            background: url("../images/icon/ico-sel.png") no-repeat 90% 90%;
+            z-index: 2;
+            .none;
         }
         &.on:after{
             content: "";
@@ -69,5 +81,8 @@
             background: url("../images/icon/ico-selon.png") no-repeat 90% 90%;
             z-index: 2;
         }
+    }
+    &.edit dd:after{
+        .block;
     }
 }
