--- a/src/style-router/userinfo.less
+++ b/src/style-router/userinfo.less
@@ -54,6 +54,7 @@
     .font(30px);
     .p_r;
     border-top: 10px solid #f8f8f8;
+    
     .btnbox{
         .pt(50px);
         .tc;
@@ -94,6 +95,9 @@
             .font(26px);
             .pt(15px);
 
+        }
+        .tel{
+            color: #4ecde2;
         }
         .tag{
             .inline-block;
@@ -160,6 +164,291 @@
         padding-right: 20px;
     }
     img{
-        width: 100%;
+        // width: 100%;
+        width: 150px;
+        height: 150px;
+    }
+}
+.impression{
+    .margin(0);
+    dt,dd{
+        background: #ececec;
+        color: #666;
+        .font(26px;64px);
+        .padding(0 30px);
+        .mr(20px);
+        .mb(20px);
+        .inline-block;
+    }
+    dd{
+        background: #008be6;
+        color: #fff;
+        &.gray{
+            background: #ececec;
+            color: #666;
+        }
+            
+    }
+}
+.addimpression{
+    .impression{
+        .padding(0 30px 10px);
+        border-bottom: 1px solid #d9d9d9;
+    }
+     .padding(30px 0);
+     .btnbox{
+         .margin(50px 0);
+         button{
+            width: 42%;
+            .circle(6px);
+            .ml(30px);
+         }
+         .btntintgray{
+             background: #e3e3e3;
+         }
+        .btnred{
+            background: #008be6;
+            border-color: #008be6;
+        }
+     }
+}
+// 配置 list
+.carconfiglist{
+    background: #efeff4;
+    .pt(30px);
+    dl{
+        background: #fff;
+        border-top: 1px solid #d9d9d9;
+        border-bottom: 1px solid #d9d9d9;
+    }
+    dt{
+        .font(30px;95px);
+        .ml(30px);
+    }
+    dd{
+        border-top: 1px solid #d9d9d9;
+        .ml(30px);
+        .pl(40px);
+        color: #666;
+        .font(26px;68px);
+        .p_r;
+        &:before{
+            .square(20px);
+            .bg-color(#666);
+            content: "";
+            .circle(50%);
+            .pos-alt(0;50%);
+            .mt(-10px);
+        }
+    }
+}
+.cartypeinfo{
+    background: #efeff4;
+    .pt(1px);
+    dl.typeinfo{
+        background: #fff;
+        border-top: 1px solid #d9d9d9;
+        border-bottom: 1px solid #d9d9d9;
+        .padding(20px 30px);
+        .mt(30px);
+        dt{
+            .font(28px;38px);
+        }
+        dd{
+            .pt(20px);
+            .font(24px;30px);
+            color: #666;
+            img{
+                .circle(50%);
+                vertical-align: middle;
+                border: 1px solid #d9d9d9;
+                margin-top: -2px;
+            }
+            .tr{
+                .font(30px);
+                color: #dd2727;
+            }
+        }
+    }
+    dl.typeconfig{
+        background: #fff;
+        border-top: 1px solid #d9d9d9;
+        border-bottom: 1px solid #d9d9d9;
+        .mt(30px);
+        dd{
+            .padding(0 30px);
+            .font(30px;86px);
+            color: #333;
+            .p_r;
+            &:after{
+                border-top: 2px solid #d9d9d9;
+                border-right: 2px solid #d9d9d9;
+                content: "";
+                .square(20px);
+                transform: rotate(45deg);
+                .pos-atr(50%;30px);
+                .mt(-10px);
+            }
+        }
+        .ico-config{
+            .inline-block;
+            background: url("../images/icon/ico-config.png") no-repeat;
+            .square(38px);
+            .mr(15px);
+        }
+    }
+    .typetit{
+        .padding(0 30px);
+        .fix;
+        h4{
+            .font(30px;70px);
+            
+        }
+        span{
+            .fr;
+            .font(22px;70px);
+            color: #666;
+        }
+    }
+    dl.typeseller{
+        background: #fff;
+        border-top: 1px solid #d9d9d9;
+        border-bottom: 1px solid #d9d9d9;
+        dd{
+            border-bottom: 1px solid #d9d9d9;
+            .ml(30px);
+            min-height: 112px;
+            .padding(25px 0);
+            &:last-child{
+                border-bottom: none;
+            }
+        }
+        .saller{
+            .p_r;
+            .pl(140px);
+            img{
+                .pos-alt;
+                .circle(50%);
+            }
+            h3{
+                .font(30px);
+            }
+            p.company{
+                .pt(12px);
+                .font(26px;1.2);
+                color: #666;
+                i{
+                    .ml(3px);
+                }
+            }
+            p.target{
+                .pt(15px);
+                i{
+                    .font(20px;34px);
+                    .padding(0 15px);
+                    .inline-block;
+                    .bg-color(#f2f2f2);
+                    .circle(5px);
+                }
+            }
+        }
+    }
+}
+.addcartypeseller{
+    .font(30px);
+    .tc;
+    .padding(60px 0);
+    color: #bababa;
+}
+.carseries{
+    background: #efeff4;
+    .pt(1px);
+    dl.seriesinfo{
+        background: #fff;
+        border-top: 1px solid #d9d9d9;
+        border-bottom: 1px solid #d9d9d9;
+        .mt(30px);
+        dd{
+            .padding(25px 0 25px 30px);
+            span{
+                .inline-block;
+                .mr(42px);
+                .font(24px;30px);
+                color: #666;
+            }
+            img{
+                .circle(50%);
+                margin-top: -2px;
+                .mr(3px);
+            }
+            border-bottom: 1px solid #d9d9d9;
+            &:last-child{
+                border-bottom: none;
+            }
+        }
+    }
+    dl.typeinfo{
+        background: #fff;
+        border-top: 1px solid #d9d9d9;
+        border-bottom: 1px solid #d9d9d9;
+        .padding(0 30px);
+        .mt(30px);
+        dt{
+            .font(28px;38px);
+            .mt(30px);
+        }
+        dd{
+            .padding(30px 0);
+            .font(24px;30px);
+            color: #666;
+            border-bottom: 1px solid #d9d9d9;
+            img{
+                .circle(50%);
+                vertical-align: middle;
+                border: 1px solid #d9d9d9;
+                margin-top: -2px;
+            }
+            .tr{
+                .font(30px);
+                color: #dd2727;
+            }
+            &:last-child{
+                border-bottom: none;
+            }
+        }
+    }
+}
+.userinfonew{
+    border-top: none;
+}
+.userinfotit{
+    background: #efeff4;
+    .padding(0 30px);
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    .fix;
+    h4{
+        .font(30px;72px);
+    }
+    i{
+        .fr;
+        .font(22px; 72px);
+        color: #666;
+    }
+}
+.cartelphone{
+    .font(30px; 60px);
+    .tc;
+    .padding(15px);
+    border-top: 1px solid #d9d9d9;
+    color: #4ecde2;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width:100%;
+    i{
+        .circle(40%);
+        background-size: cover;
+        .mr(12px);
     }
 }
